# voice-mirror

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  THIRD-PARTY-NOTICES  ideas.md  index.html  install.ps1  install.sh  jsconfig.json  launch.bat  launch.sh  package-lock.json  package.json  restart.sh  test-notes.md  uninstall.ps1  uninstall.sh  vite.config.js
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: antivirus.yml  build.yml  ci.yml  installer-test.yml  release.yml  scorecard.yml
chrome-extension/: README.md  background.js  manifest.json  options.html
cli/: README.md  checks.mjs  index.mjs  ollama-setup.mjs  python-setup.mjs  setup.mjs  uninstall.mjs
docs/: ARCHITECTURE.md  CODE-AUDIT.md  CONFIGURATION.md  DEVELOPMENT.md  IDEAS.md  MCP-TAURI-ISSUES.md  PYTHON-BACKEND.md  README.md  ROADMAP.md  THEME-SYSTEM.md  TODO.md
docs/archive/: 2026-02-28-device-picker-overhaul.md  2026-02-28-lsp-phase2-3-design.md  2026-02-28-lsp-phase2-3-plan.md  2026-02-28-lsp-server-management-design.md  2026-02-28-lsp-server-management.md  2026-02-28-problems-panel-design.md  2026-02-28-problems-panel.md  2026-02-28-runtime-diagnostics.md  2026-02-28-status-bar-design.md  2026-02-28-status-bar.md  2026-02-28-wave2-ux-design.md  2026-03-01-project-output-channels-design.md  2026-03-01-project-output-channels-plan.md  2026-03-02-quick-wins-refactor.md  2026-03-04-lsp-gap-closure.md  2026-03-10-browser-menu-downloads-design.md  2026-03-11-workspace-state-persistence-design.md  2026-03-13-element-inspector-panel-design.md  2026-03-13-python-dev-server-detection-design.md  2026-03-13-python-venv-auto-setup-design.md  2026-03-17-mcp-server-manager-design.md  CROSS-MODEL-BROWSER-DIALOGUE.md  FOLLOW-AGENT.md  MCP-SERVERS.md  STT-MODELS.md  TERMINAL-GAP-ANALYSIS.md  VSCODE-TERMINAL-ANALYSIS.md  fix-pipe-project-channels.md  status-bar-research.md  terminal-scrollbar-minimap.md
docs/bugs/: 2026-03-06-stale-tts-messages.md
docs/design/: CODE-NAVIGATION-MCP.md  LSP-DESIGN.md  UNIFIED-SERVER-PLAN.md
docs/guides/: CONFIGURATION.md  GETTING-STARTED.md  THEME-SYSTEM.md  VOICE-PIPELINE.md
docs/implementation/: DEV-SERVER-DETECTION.md  IDE-GAPS.md  LSP-CONFIG-GAPS.md  LSP-DESIGN.md
docs/internal/: IDE-GAPS.md  LSP-DESIGN.md  TERMINAL-RENDERING-BUG.md
docs/plans/: 2026-02-25-select-element-design.md  2026-02-25-select-element.md  2026-02-26-accessibility-extraction-design.md  2026-02-26-accessibility-extraction-plan.md  2026-02-26-diagnostics-design.md  2026-02-26-diagnostics-plan.md  2026-02-26-layout-refactor-design.md  2026-02-26-layout-refactor-plan.md  2026-02-26-log-file-fallback-design.md  2026-02-26-log-file-fallback-plan.md  2026-02-26-pixel-agents-scoping.md  2026-02-26-select-element-v2-design.md  2026-02-26-select-element-v2.md  2026-02-26-vscode-terminal-ux-design.md  2026-02-26-vscode-terminal-ux-plan.md  2026-02-27-agent-browser-design.md  2026-02-27-agent-browser-plan.md  2026-02-27-gutter-change-indicators-design.md  2026-02-27-gutter-change-indicators-plan.md  2026-02-27-terminal-high-priority-design.md  (+13 more)
electron/: README.md  claude-spawner.js  cli-spawner.js  config.js  font-manager.js  ipc-handlers.js  ipc-validators.js  main.js  overlay.html  preload.js
mcp-server/: README.md  index.js  package-lock.json  package.json  paths.js  tool-groups.js
python/: CLAUDE.md  README.md  devices.json  electron_bridge.py  global_hotkey.py  lg_tv.py  notifications.py  prompts.py  qwen_handler.py  record_samples.py  requirements-optional.txt  requirements.txt  run_mcp.py  settings.py  smart_home.py  test_global_hotkey.py  text_injector.py  train_verifier.py  voice_agent.py
scripts/: launch-dev.vbs
src/: App.svelte  main.js
src-tauri/: Cargo.toml  tauri.conf.json  tauri.nightly.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  util.rs
src-tauri/src/assets/: design-overlay.js
src-tauri/src/commands/: ai.rs  chat.rs  config.rs  design.rs  dev_server.rs  files.rs  lens.rs  lsp.rs  mcp.rs  mod.rs  onboarding.rs  output.rs  project.rs  sandbox.rs  screenshot.rs  shortcuts.rs  terminal.rs  tools.rs  voice.rs  window.rs  workspace_state.rs
src-tauri/src/commands/files/: directory.rs  filesystem.rs  git.rs  mod.rs  read_write.rs  search.rs
src-tauri/src/commands/lens/: device_preview.rs  devtools.rs  downloads.rs  find.rs  history.rs  mod.rs  navigation.rs  tabs.rs  webview_setup.rs  zoom.rs
src-tauri/src/config/: crypto.rs  migration.rs  mod.rs  persistence.rs  schema.rs
src-tauri/src/ipc/: mod.rs  pipe_client.rs  pipe_server.rs  protocol.rs
src-tauri/src/lsp/: client.rs  detection.rs  documents.rs  formatting.rs  installer.rs  lifecycle.rs  lsp-servers.json  manifest.rs  mod.rs  requests.rs  scanning.rs  types.rs
src-tauri/src/mcp/: mod.rs  pipe_router.rs  server.rs  tools.rs
src-tauri/src/mcp/handlers/: browser.rs  capture.rs  core.rs  diagnostic.rs  facades.rs  memory.rs  mod.rs  n8n.rs  sandbox.rs  screen.rs  voice_clone.rs
src-tauri/src/providers/: api.rs  cli.rs  manager.rs  mod.rs  tool_calling.rs
src-tauri/src/providers/cli/: instructions.rs  mcp_config.rs  mod.rs  status_line.rs
src-tauri/src/services/: auth_vault.rs  browser_bridge.rs  cdp.rs  crash_handler.rs  dev_server.rs  hang_watchdog.rs  inbox_watcher.rs  input_hook.rs  logger.rs  mod.rs  output.rs  platform.rs  ports.rs  sandbox.rs  sandbox_stream.rs  uia.rs  window_follow.rs  window_stream.rs
src-tauri/src/services/dev_server/: mod.rs  node.rs  python.rs  util.rs
src-tauri/src/shell/: mod.rs
src-tauri/src/terminal/: mod.rs
src-tauri/src/voice/: mod.rs  pipeline.rs  stt.rs  tts.rs  vad.rs
src-tauri/src/voice/pipeline/: mod.rs  playback.rs
src-tauri/src/voice/tts/: crypto.rs  edge_tts.rs  kokoro_impl.rs  mod.rs
test/: README.md
test-staging/: config.json  hello.txt  notes.md
voice-core/: Cargo.toml  stt-worker.py
wayland-orb/: Cargo.toml  README.md
wayland-orb/src/: ipc.rs  main.rs  renderer.rs
(+657 files in other folders)
