[package]
name = "voice-mirror"
version = "0.12.6"
description = "Voice-controlled AI agent overlay for your desktop"
license = "MIT"
authors = [""]
edition = "2021"
default-run = "voice-mirror"

[lib]
name = "voice_mirror_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "unstable"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
portable-pty = "0.8"
reqwest = { version = "0.12", features = ["stream", "json"] }
flate2 = "1"
futures-util = "0.3"
# CDP-over-WebSocket client for Sandbox mode (driving external apps' WebView2)
tokio-tungstenite = "0.24"

# File tree (.gitignore pattern matching)
ignore = "0.4"

# MCP handler dependencies
notify = "7"
url = "2"
percent-encoding = "2"
regex = "1"

# Voice engine dependencies
cpal = "0.15"
rodio = "0.19"

# STT: whisper-rs (C++ FFI to whisper.cpp)
whisper-rs = { version = "0.15", optional = true }

# TTS: ONNX Runtime for Kokoro local inference
ort = { version = "2.0.0-rc.11", optional = true }
zip = { version = "2", default-features = false, features = ["deflate"], optional = true }
byteorder = { version = "1", optional = true }

# TTS: MP3 decode for Edge TTS cloud audio
symphonia = { version = "0.5", default-features = false, features = ["mp3"] }

# Tool calling: UUID generation for tool call IDs
uuid = { version = "1", features = ["v4"] }

# Base64 encoding for screenshot data URLs
base64 = "0.22"

# Auth vault encryption (AES-256-GCM) + random key generation
aes-gcm = "0.10"
rand = "0.8"

# Lazy static initialization (ref map, etc.)
once_cell = "1"

# Image encoding (bitmap → PNG) and thumbnail resize for native window capture
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "ico", "gif", "bmp", "tiff"] }

# LSP client
lsp-types = "0.97"
which = "7"

# Performance monitoring (CPU + memory stats)
sysinfo = { version = "0.33", default-features = false, features = ["system"] }

# Clipboard access for text injection (dictation feature)
arboard = "3"
tauri-plugin-decorum = "1.1.1"

# Cross-platform trash/recycle bin support
trash = "5"

# Lock-free frame buffer for window streaming
arc-swap = "1"

# Open files/folders with the OS default handler
opener = "0.7"

# Direct WebView2 COM access for JS eval + screenshot capture (Windows only)
[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows-core = "0.61"
windows = { version = "0.61", features = [
    "Win32_System_Com_StructuredStorage",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    # UI Automation (native, non-CDP app driving) + the COM/input it needs
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    # Native crash handler: SEH unhandled-exception filter + minidump + module lookup
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_Storage_FileSystem",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_Graphics_Dwm",
    "Win32_Storage_Xps",
    "Win32_Security_Cryptography",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Graphics_Imaging",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Foundation",
] }

[[bin]]
name = "voice-mirror-mcp"
path = "src/bin/mcp.rs"

[features]
default = []
whisper = ["whisper-rs"]
cuda = ["whisper-rs/cuda"]
onnx = ["ort", "zip", "byteorder"]
native-ml = ["whisper", "onnx"]
