[package]
name = "wayland-orb"
version = "0.1.0"
edition = "2021"

[dependencies]
smithay-client-toolkit = "0.19"
wayland-client = "0.31"
tiny-skia = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
calloop = "0.13"

[profile.release]
opt-level = "s"
lto = true
strip = true
